--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>escola</title>
+    <link rel="stylesheet" href=""><div class="/estilo css"> body</div>
 </head>
 <body>
     <header> 
         <img src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul>
-             <li> escola</li>
-             <li> estudante</li>
+             <li>escola</li>
+             <li>estudante</li>
         </ul>
 </body>
 </html>
