--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>escola</title>
-    <link rel="stylesheet" href=""><div class="/estilo css"> body</div>
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <header> 
