--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
-    <header> 
+    <header class="cabecalho">
         <img src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul>
              <li>escola</li>
