--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <header class="cabecalho">
         <img src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul>
-             <li>escola</li>
-             <li>estudante</li>
+             <li>  * escola</li>
+             <li>  * estudante</li>
         </ul>
+    </header>
 </body>
 </html>
