--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="./The_Powerpuff_Girls_logo 1.png" alt="">
+        <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul>
              <li>  escola</li>
              <li>  estudante</li>
