--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
-        <ul>
-             <li>  escola</li>
-             <li>  estudante</li>
+        <ul class="cabecalho-lista">
+             <li class="lista-item">  escola</li>
+             <li class="lista-item">  estudante</li>
         </ul>
     </header>
 </body>
