--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>escola</title>
+    <title>personagens</title>
     <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul class="cabecalho-lista">
-             <li class="lista-item">  escola</li>
-             <li class="lista-item">  estudante</li>
+             <li class="lista-item">  personagens</li>
+             <li class="lista-item">  caracteristicas</li>
         </ul>
     </header>
 </body>
