--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul class="cabecalho-lista">
              <li class="lista-item">  personagens</li>
-             <li class="lista-item">  caracteristicas</li>
+             <li class="lista-item">  informações</li>
         </ul>
     </header>
 </body>
