--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
         <ul class="cabecalho-lista">
-             <li class="lista-item">  personagens</li>
-             <li class="lista-item">  informações</li>
+             <li class="lista-item">  PERSONAGENS</li>
+             <li class="lista-item">  iINFORMAÇÔES</li>
         </ul>
     </header>
 </body>
