--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <section>
       <h2>MENINAS SUPER PODEROSAS</h2>
-      <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho animado criada e escrita por Craig McCracken. Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas pelo Professor Utônio, que acidentalmente deixou derrubar o Elemento X na poção da "Garotinha Perfeita" (uma mistura de açúcar, tempero e tudo o que há de bom). Sendo assim, o Elemento X deu a elas super poderes, e entre uma brincadeira e outra, elas tem que salvar a cidade fictícia norte-americana de Townsville de diversos monstros.</p>
-      <p></p>
+      <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho animado criada e escrita por Craig McCracken. </p>
+      <p>Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas pelo Professor Utônio, que acidentalmente deixou derrubar o Elemento X na poção da "Garotinha Perfeita" (uma mistura de açúcar, tempero e tudo o que há de bom). Sendo assim, o Elemento X deu a elas super poderes, e entre uma brincadeira e outra, elas tem que salvar a cidade fictícia norte-americana de Townsville de diversos monstros.</p>
       <img src="meninassuper-Photoroom 1.png" alt="">    
     
     </section>
