--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </ul>
     </header>
 
-    <section>
+    <section class="secao1">
+        <div>
       <h2>MENINAS SUPER PODEROSAS</h2>
       <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
          animado criada e escrita por Craig McCracken. </p>
@@ -24,6 +25,7 @@
         (uma mistura de açúcar, tempero e tudo o que há de bom). Sendo assim, o Elemento X deu a elas super poderes, 
         e entre uma brincadeira e outra, elas tem que salvar a cidade fictícia norte-americana de Townsville de 
         diversos monstros.</p>
+    </div>
       <img src="meninassuper-Photoroom 1.png" alt="">    
     
     </section>
