--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <section class="secao1">
-        <div>
-      <h2>MENINAS SUPER PODEROSAS</h2>
+        <div> class="secao1-div">
+      <h2> classMENINAS SUPER PODEROSAS</h2>
       <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
          animado criada e escrita por Craig McCracken. </p>
       <p>Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas 
