--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
+        <div class="secao1-/div>
         <ul class="cabecalho-lista">
              <li class="lista-item">  PERSONAGENS</li>
              <li class="lista-item">  INFORMAÇÔES</li>
