--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./The_Powerpuff_Girls_logo 1.png" alt="">
-        <div class="secao1-/div>
+
         <ul class="cabecalho-lista">
              <li class="lista-item">  PERSONAGENS</li>
              <li class="lista-item">  INFORMAÇÔES</li>
@@ -18,6 +18,10 @@
 
     <section class="secao1">
         <div class="secao1"> 
+          <h2 class="secao1-titulo"> sobre
+
+    <p class="secao1-p1">The Powerpuff Girls,</p>
+    <p class="secao1-p2" Conta a história de três garotas com super poderes:
       <h2> MENINAS SUPER PODEROSAS</h2>
       <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
          animado criada e escrita por Craig McCracken. </p>
