--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <div class="secao1"> 
           <h2 class="secao1-titulo"> sobre
 
-    <p class="secao1-p1">The Powerpuff Girls,</p>
-    <p class="secao1-p2" Conta a história de três garotas com super poderes:
-      <h2> MENINAS SUPER PODEROSAS</h2>
-      <p>The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
-         animado criada e escrita por Craig McCracken. </p>
-      <p>Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas 
+    <p class="secao1-p1">The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
+      animado criada e escrita por Craig McCracken. </p>
+    <p class="secao1-p2">Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas 
         pelo Professor Utônio, que acidentalmente deixou derrubar o Elemento X na poção da "Garotinha Perfeita" 
         (uma mistura de açúcar, tempero e tudo o que há de bom). Sendo assim, o Elemento X deu a elas super poderes, 
         e entre uma brincadeira e outra, elas tem que salvar a cidade fictícia norte-americana de Townsville de 
