--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
 
     <section class="secao1">
-        <div class="secao1"> 
+        <div class="secao1-div"> 
           <h2 class="secao1-titulo">/The Powerpuff Girls</h2>
-          
+
     <p class="secao1-p1">The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
       animado criada e escrita por Craig McCracken. </p>
     <p class="secao1-p2">Conta a história de três garotas com super poderes: Florzinha, Lindinha e Docinho. Elas foram criadas 
