--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="secao1">
         <div class="secao1-div"> 
-          <h2 class="secao1-titulo">/The Powerpuff Girls</h2>
+          <h2 class="secao1-titulo">/MENINAS SUPER PODEROSAS</h2>
 
     <p class="secao1-p1">The Powerpuff Girls, conhecido no Brasil como As Meninas Superpoderosas, é uma série de desenho
       animado criada e escrita por Craig McCracken. </p>
