--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
       <img src="meninassuper-Photoroom 1.png" alt="">    
     
     </section>
-</body>
-</html>
+
+    <section class=" secao2">
+      <h2 clas="secao2-titulo"></h2>Quem são os personagens?
+
+    </section>
