--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     </section>
 
     <section class=" secao2">
-      <h2 clas="secao2-titulo"></h2>Quem são os personagens?
+      <h2 clas="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
 
     </section>
