--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     </section>
 
     <section class=" secao2">
-      <h2 clas="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
+      <h2 class="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
+      <div class="secao2-todos-personagens">
+          <div class="personagens">
+              <img src="./Docinho 1.png" alt="">
+              <h3>DOCINHO</h3>
+          </div>
+      </div>
 
     </section>
