--- a/index.html
+++ b/index.html
@@ -43,3 +43,10 @@
       </div>
 
     </section>
+    <div class="personagens">
+      <img src="./Lindinha 1.png" alt="">
+      <h3>LINDINHA</h3>
+  </div>
+</div>
+
+</section>
