--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <img src="./Lindinha 1.png" alt="">
       <h3>LINDINHA</h3>
   </div>
-</div>
+
 
 </section>
+<div class="personagens">
+  <img src="./florzinh 1.png" alt="">
+  <h3>FLORZINHA</h3>
