--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     </section>
 
-    <section class=" secao2">
+    {<section class=" secao2">
       <h2 class="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
       <div class="secao2-todos-personagens">
         
@@ -52,3 +52,4 @@
 <div class="personagens">
   <img src="./florzinh 1.png" alt="">
   <h3>FLORZINHA</h3>
+    }
