--- a/index.html
+++ b/index.html
@@ -32,19 +32,24 @@
     
     </section>
 
-    {<section class=" secao2">
+    <section class=" secao2">
       <h2 class="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
-
       <div class="secao2-todos-personagens">
         <div class="personagens">
               <img src="./Docinho 1.png" alt="">
               <h3>DOCINHO</h3>
-          </div>
-    <div class="personagens">
-      <img src="./Lindinha 1.png" alt="">
-      <h3>LINDINHA</h3>
-  </div>
-<div class="personagens">
-  <img src="./florzinh 1.png" alt="">
-  <h3>FLORZINHA</h3>
-    }
+        </div>
+        <div class="personagens">
+          <img src="./Lindinha 1.png" alt="">
+          <h3>LINDINHA</h3>
+        </div>
+        <div class="personagens">
+          <img src="./florzinh 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
+      </div>
+
+
+  
+</body>
+</html>
