--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section class=" secao2">
-      <h2 class="secao2-titulo"></h2>QUEM SÃO OS PERSONAGENS?
+      <h2 class="secao2-titulo">QUEM SÃO OS PERSONAGENS?</h2>
       <div class="secao2-todos-personagens">
         <div class="personagens">
               <img src="./Docinho 1.png" alt="">
