--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
           <img src="./florzinh 1.png" alt="">
           <h3>FLORZINHA</h3>
         </div>
+        <div class="personagens">
+          <img src="./0bcadfbdf1f07d010f53670ff66fb73e92b6469fv2_00-removebg-preview 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
+        <div class="personagens">
+          <img src="./Macaco_louco 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
+        <div class="personagens">
+          <img src="./Sara_Belo 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
+        <div class="personagens">
+          <img src="./Princesa 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
+        <div class="personagens">
+          <img src="./png-transparent-professor-utonium-cartoon-network-character-samurai-others-professor-cartoon-network-character-removebg-preview 1.png" alt="">
+          <h3>FLORZINHA</h3>
+        </div>
       </div>
 
 
